2011/remarks/colmatrix.txt
2012.01.19.00.04.05

Задание 2. Эх... Стало лучше, но...

	(1) Ведь, не компилируется. При чём разные компиляторы говорят одно и
		то же.

		$ g++ Task2.cpp -o ./t2
		Task2.cpp: In function ‘int main(int, char**)’:
		Task2.cpp:36:33: error: ‘itoa’ was not declared in this scope

		00.04 mike@0x02 ~/tmp/edu/2011/colmatrix
		$ clang++ Task2.cpp -o ./t2
		Task2.cpp:36:5: error: use of undeclared identifier 'itoa'
						itoa(fileNum++, fileName, 16);
						^
		1 error generated.

		Потому что:
		Portability. This function is not defined in ANSI-C and is not
		part of C++, but is supported by some compilers.

		Что вызывает вопрос о том, откуда взялся 3disasm.txt? :)

Задание 3. В целом, опять не так уж и плохо, но, ведь, всё равно, печальки...

	(1) Ошибки. fseek тоже может не сработать, как и system, как и read,
		как и т.д.

	(2) Чтение с дискетки может завершиться с ошибкой. И почему вы не
		устанавливаете dh (указатель головки) правильно?

	(3) У Вас file какой-то совсем странный. Пример программы для Linux.
		Как мне проверить, что всё работает? Как Вы проверяли?

Задание 5. ОК

Задание 6.

	(1) Переводите систему из одного режима работы в другой без запрета
		прерываний.
	
	(2) run.sh не работает:

		$ sh run.sh 
		nasm: fatal: unable to open input file `task6.asm'

		Не во всех системах имена файлов не чувствительны к регистру.

	Остальное нормально.

2012.01.17.16.15.44

Задание 2.

	(1) Не компилируется
	
		$ g++ Task2.cpp -o ./t2
		Task2.cpp: In function ‘int main(int, char**)’:
		Task2.cpp:34:33: error: ‘itoa’ was not declared in this scope
		Task2.cpp:43:15: error: ‘system’ was not declared in this scope

	(2) Длина записи числа d по основанию 16 действительно не будет
		превышать sizeof(d) * 2 + 1, но запись по основанию 10 может
		быть длиннее.

2012.01.17.02.07.19

Без изменений

2012.01.14.01.11.03

Без изменений

2012.01.11.20.32.04

Без изменений.

2012.01.01.19.19.14

Без изменений.

2011.12.27.19.25.26

Без изменений

2011.12.25.18.07.40

Задание 2. Смотрите замечания для pockerfaceOo

